src/objects/Apttus_Config2__IncentiveLimit__c.object
<CustomObject>
    <description>Represents a single limit associated with an incentive</description>
    <fields>
        <fullName>Apttus_Config2__BenefitId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated benefit</description>
        <inlineHelpText>ID of the associated benefit</inlineHelpText>
        <label>Benefit</label>
        <referenceTo>Apttus_Config2__PriceRule__c</referenceTo>
        <relationshipLabel>Limits</relationshipLabel>
        <relationshipName>IncentiveLimits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveId__c</fullName>
        <description>ID of the associated incentive</description>
        <inlineHelpText>ID of the associated incentive</inlineHelpText>
        <label>Incentive</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipLabel>Limits</relationshipLabel>
        <relationshipName>IncentiveLimits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LimitAppliesToValueSource__c</fullName>
        <description>Indicates the scope the limit should be applied to</description>
        <inlineHelpText>Indicates the scope the limit should be applied to</inlineHelpText>
        <label>Limit Applies To Value Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LimitAppliesTo__c</fullName>
        <description>Indicates the scope the limit should be applied to</description>
        <inlineHelpText>Indicates the scope the limit should be applied to</inlineHelpText>
        <label>Limit Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                    <default>true</default>
                    <label>Account</label>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LimitMetric__c</fullName>
        <description>The limit metric</description>
        <inlineHelpText>The limit metric</inlineHelpText>
        <label>Limit Metric</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Benefit Quantity</fullName>
                    <default>true</default>
                    <label>Benefit Quantity</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LimitValueSource__c</fullName>
        <description>The source for dynamic limit values</description>
        <inlineHelpText>The source for dynamic limit values</inlineHelpText>
        <label>Limit Value Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LimitValue__c</fullName>
        <description>The limit value</description>
        <inlineHelpText>The limit value</inlineHelpText>
        <label>Limit Value</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RecurrenceFrequency__c</fullName>
        <description>The recurrence frequency</description>
        <inlineHelpText>The recurrence frequency</inlineHelpText>
        <label>Recurrence Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RecurrenceType__c</fullName>
        <description>The limit recurrence type</description>
        <inlineHelpText>The limit recurrence type</inlineHelpText>
        <label>Recurrence Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                    <default>true</default>
                    <label>One Time</label>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Incentive Limit</label>
    <nameField>
        <displayFormat>IL-{00000000}</displayFormat>
        <label>Limit Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentive Limits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>